--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,9 @@ body {
 
 .main {
   height: 90vh;
-  width: 70vh;
   background: #fff;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  width:60%;
+  /*width:80vw; */
   margin: 0 auto;
 }
 
